--- a/MyWebApiApp/MyWebApiApp/appsettings.json
+++ b/MyWebApiApp/MyWebApiApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MyDB": "Data Source=.;Initial Catalog=WebAPI-NET5;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
